# exwm

./: .dir-locals.el  PLAN.md  flake.nix  justfile
.githooks/: pre-commit
.github/workflows/: rocky-test.yml
compositor/: Cargo.toml
compositor/src/: input.rs  main.rs  render.rs  state.rs
compositor/src/backend/: drm.rs  headless.rs  mod.rs  winit.rs
compositor/src/handlers/: compositor.rs  layer_shell.rs  mod.rs  seat.rs  shm.rs  xdg_shell.rs  xwayland.rs
compositor/src/ipc/: dispatch.rs  server.rs
compositor/src/vr/: blink_wink.rs  drm_lease.rs  fatigue.rs  frame_timing.rs  gaze_focus.rs  gaze_zone.rs  gesture.rs  hand_tracking.rs  mod.rs  openxr_state.rs  stub.rs  virtual_keyboard.rs
docs/: extraction-plan.md  module-classification.md  module-dependencies.dot
docs/research/: anvil-patterns.md  (+5 more)
src/: README.md
test/: compositor-test.el  ewwm-core-test.el  ewwm-ext-test.el  ewwm-gesture-test.el  ewwm-hand-tracking-test.el  ewwm-ipc-test.el  ewwm-keyboard-test.el  ewwm-manage-test.el  ewwm-vr-display-test.el  ewwm-vr-eye-focus-test.el  ewwm-vr-eye-test.el  ewwm-vr-fatigue-test.el  ewwm-vr-gaze-zone-test.el  ewwm-vr-test.el  ewwm-vr-wink-test.el  ewwm-week5-test.el  exwm-core-test.el  exwm-input-test.el  exwm-workspace-test.el  run-tests.el  v031-ipc-security-test.el  v041-wm-commands-test.el  week1-integration-test.el  week12-integration-test.el  week13-integration-test.el  week14-integration-test.el  week18-integration-test.el  week20-integration-test.el  week5-integration-test.el  week7-integration-test.el  week9-integration-test.el
(+22 files in other folders)
